ADDED: require.js, working but an error is shown about importing jquery before importing bootstrap, but even if I do it remains...

--- a/src/main/resources/static/html/news.html
+++ b/src/main/resources/static/html/news.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-	    <script type="text/javascript" src="./xslt/js/boostrap.min.css"></script>
-	    <link rel="stylesheet" type="text/css" src="./xslt/css/boostrap.min.css"></script>
+        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
         <style type="text/css">
             body, p{
                 font-family: 'Roboto', sans-serif;
